Fix Swagger generation and route
