# docs/swagger.json
@@ -1,15 +1,8 @@
-// Package docs GENERATED BY SWAG; DO NOT EDIT
-// This file was generated by swaggo/swag
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Endpoints available in the E-book store REST API.",
+        "title": "E-book Store",
         "termsOfService": "https://github.com/C0lliNN",
         "contact": {
             "name": "Raphael Collin",
@@ -19,10 +12,10 @@ const docTemplate = `{
             "name": "Apache 2.0",
             "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "http://localhost:8080",
+    "basePath": "/",
     "paths": {
         "/books": {
             "get": {
@@ -35,13 +28,29 @@ const docTemplate = `{
                 "summary": "Fetch Books",
                 "parameters": [
                     {
-                        "description": "Filters",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/catalog.SearchBooks"
-                        }
+                        "type": "string",
+                        "name": "authorName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "description",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "perPage",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "title",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -330,13 +339,19 @@ const docTemplate = `{
                 "summary": "Fetch Orders",
                 "parameters": [
                     {
-                        "description": "Filters",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/shop.SearchOrders"
-                        }
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "perPage",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "status",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -725,26 +740,6 @@ const docTemplate = `{
                 }
             }
         },
-        "catalog.SearchBooks": {
-            "type": "object",
-            "properties": {
-                "authorName": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "perPage": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
         "catalog.UpdateBook": {
             "type": "object",
             "properties": {
@@ -844,36 +839,6 @@ const docTemplate = `{
                     "type": "integer"
                 }
             }
-        },
-        "shop.SearchOrders": {
-            "type": "object",
-            "properties": {
-                "page": {
-                    "type": "integer"
-                },
-                "perPage": {
-                    "type": "integer"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "https://ebook-store2.herokuapp.com",
-	BasePath:         "/",
-	Schemes:          []string{},
-	Title:            "E-book Store",
-	Description:      "Endpoints available in the E-book store REST API.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
